Freeze/Thaw code can crash in the presence of OSR frames

XMLWordPrintable

    • b19

        Sergey Kuksenko has a benchmark that is throws in Continuation.pinnedReason with an unknown pinned reason. When we run with a debug build then it triggers an assert in ThawBase::copy_from_chunk very quickly.

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/ws/jdk/open/src/hotspot/share/oops/stackChunkOop.inline.hpp:356), pid=2099017, tid=2099046
        # Error: assert(from + size <= end_address()) failed
        #
        # JRE version: Java(TM) SE Runtime Environment (23.0) (fastdebug build 23-internal-2024-02-08-0740139.albatem...)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-internal-2024-02-08-0740139.ab..., mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0xa4cab2] ThawBase::copy_from_chunk(long*, long*, int)+0x2a2
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/lib/systemd/systemd-coredump %P %u %g %s %t %c %h" (or dumping to /tmp/core.2099017)
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

              Assignee:
              Patricio Chilano Mateo
              Reporter:
              Alan Bateman
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: