8325469: Freeze/Thaw code can crash in the presence of OSR frames

Reviewed-by: rpressler, dlong