src/hotspot/share/runtime/stackChunkFrameStream.inline.hpp
@@ -188,9 +188,9 @@ inline int StackChunkFrameStream<frame_kind>::stack_argsize() const {
     return 0;
   }
   assert(cb() != nullptr, "");
-  assert(cb()->is_compiled(), "");
-  assert(cb()->as_compiled_method()->method() != nullptr, "");
-  return (cb()->as_compiled_method()->method()->num_stack_arg_slots() * VMRegImpl::stack_slot_size) >> LogBytesPerWord;
+  assert(cb()->is_nmethod(), "");
+  assert(cb()->as_nmethod()->method() != nullptr, "");
+  return (cb()->as_nmethod()->num_stack_arg_slots() * VMRegImpl::stack_slot_size) >> LogBytesPerWord;
 }
 
 template <ChunkFrames frame_kind>
